--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://i.imgur.com/XYZ1234.jpg') no-repeat center center/cover; /* Replace with your mod menu background image URL */
+    background: url('https://imgur.com/a/eLRAVUD.jpg') no-repeat center center/cover; /* Replace with your mod menu background image URL */
     filter: blur(5px);
     z-index: -1;
 }
