--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,13 @@ body {
     color: #fff;
 }
 
-/* Background Styling */
 .background {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('https://imgur.com/a/eLRAVUD) no-repeat center center/cover; /* Replace with your mod menu background image URL */
+    background: url('modmenu-background.jpg') no-repeat center center/cover; /* Local image file */
     filter: blur(5px);
     z-index: -1;
 }
