--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('assets/modmenu-background.jpg') no-repeat center center/cover;
+    background: url('modmenu-background.jpg') no-repeat center center/cover;
     filter: blur(5px);
     z-index: -1;
 }
